examples/nested-protocols/ltypes/errors/WrongCaller1.scr
nested protocol Proto1(role A, role B) {
  choice at A {
    A calls Proto1(A, B);
  } or {
    B calls Proto1(A, B);
  } or {
    m1() from A to B;
  }
}